added projects icon

--- a/index.html
+++ b/index.html
@@ -15,98 +15,100 @@
     <script src="script.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Lato:400,700&amp;subset=latin-ext" rel="stylesheet">
 </head>
- 
+
 <body>
-   <div class="pageWrapper">
-    <nav>
-        <header><a href="index.html" class="textLink">Damian Zalewski IT</a></header>
-        <ul>
-<!--            <a href="#aboutMeAnchor"><li>O mnie</li></a>-->
-<!--            <a href="#mySkillsAnchor"><li>Technologie</li></a>-->
-            <a href="projects.html"><li class="buttonLink">Projekty</li></a>
-<!--            <a href="#contactAnchor"><li>Kontakt</li></a>-->
-        </ul>
-    </nav>
-    <section class="home">
-        <header>
-            Witaj na <strong>DamianZalewskiIT.</strong>
-        </header>
-    </section>
-<!--           <span id="aboutMeAnchor"></span>-->
-    <section class="aboutMe">
-        <img src="img/avatar.jpg" alt="Damian Zalewski photograpgy">
-        <div class="description">
+    <div class="pageWrapper">
+        <nav>
+            <header><a href="index.html" class="textLink">Damian Zalewski IT</a></header>
+            <ul>
+                <a href="projects.html">
+                    <li class="buttonLink">Projekty</li>
+                    <li class="iconLink"><i class="fas fa-file-word"></i></li>
+                </a>
+            </ul>
+        </nav>
+        <section class="home">
             <header>
-                Kim właściwie jestem?
+                Witaj na <strong>DamianZalewskiIT.</strong>
+            </header>
+        </section>
+        <!--           <span id="aboutMeAnchor"></span>-->
+        <section class="aboutMe">
+            <img src="img/avatar.jpg" alt="Damian Zalewski photograpgy">
+            <div class="description">
+                <header>
+                    Kim właściwie jestem?
+                </header>
+                <article>
+                    <p> Mam na imię Damian i ukończyłem studia na Państwowej Wyższej Szkole Zawodowej w Elblągu na wydziale Informatyki Stosowanej.</p>
+                    <p> W ciągu swojej nauki spotkałem się z wieloma różnymi językami jak np.: C, C++, C#, Java, Python a nawet Turbo Pascal, Fortran i Asembler.</p>
+                    <p> Obecnie jednak zajmuje się głównie językami przeznaczonymi do projektowania stron internetowych. Interesuje mnie zarówno "front end" jak i "back end".</p>
+                </article>
+            </div>
+        </section>
+        <!--    <span id="mySkillsAnchor"></span>-->
+        <section class="mySkills">
+            <header>
+                Technologie
             </header>
             <article>
-              <p>  Mam na imię Damian i ukończyłem studia na Państwowej Wyższej Szkole Zawodowej w Elblągu na wydziale Informatyki Stosowanej.</p><p> W ciągu swojej nauki spotkałem się z wieloma różnymi językami jak np.: C, C++, C#, Java, Python a nawet Turbo Pascal, Fortran i Asembler.</p><p> Obecnie jednak zajmuje się głównie językami przeznaczonymi do projektowania stron internetowych. Interesuje mnie zarówno "front end" jak i "back end".</p>
-            </article>
-        </div>
-    </section>
-<!--    <span id="mySkillsAnchor"></span>-->
-    <section class="mySkills">
-        <header>
-            Technologie 
-        </header>
-        <article>
-            <div>
-                <figure>
-                    <img src="img/html5.png" alt="html5 logo">
-                    <figcaption>HTML5</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/css3.png" alt="css3 logo">
-                    <figcaption>CSS3</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/javascript.png" alt="javascript logo">
-                    <figcaption>JavaScript</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/jQuery.png" alt="jQuery logo">
-                    <figcaption>jQuery</figcaption>
-                </figure>
-            </div>
-            <div>
-                <figure>
-                    <img src="img/react.png" alt="react logo">
-                    <figcaption>React</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/github.png" alt="github logo">
-                    <figcaption>Git/Github</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/php.png" alt="php logo">
-                    <figcaption>PHP</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/ajax.png" alt="ajax logo">
-                    <figcaption>Ajax</figcaption>
-                </figure>
-            </div>
-            <div>
-                <figure>
-                    <img src="img/json.png" alt="json logo">
-                    <figcaption>JSON</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/bootstrap.png" alt="bootstrap logo">
-                    <figcaption>Bootstrap</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/rwd.png" alt="rwd logo">
-                    <figcaption>RWD</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/csharp.png" alt="c# logo">
-                    <figcaption>C#</figcaption>
-                </figure>
+                <div>
+                    <figure>
+                        <img src="img/html5.png" alt="html5 logo">
+                        <figcaption>HTML5</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/css3.png" alt="css3 logo">
+                        <figcaption>CSS3</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/javascript.png" alt="javascript logo">
+                        <figcaption>JavaScript</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/jQuery.png" alt="jQuery logo">
+                        <figcaption>jQuery</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <img src="img/react.png" alt="react logo">
+                        <figcaption>React</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/github.png" alt="github logo">
+                        <figcaption>Git/Github</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/php.png" alt="php logo">
+                        <figcaption>PHP</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/ajax.png" alt="ajax logo">
+                        <figcaption>Ajax</figcaption>
+                    </figure>
+                </div>
+                <div>
+                    <figure>
+                        <img src="img/json.png" alt="json logo">
+                        <figcaption>JSON</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/bootstrap.png" alt="bootstrap logo">
+                        <figcaption>Bootstrap</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/rwd.png" alt="rwd logo">
+                        <figcaption>RWD</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/csharp.png" alt="c# logo">
+                        <figcaption>C#</figcaption>
+                    </figure>
 
-            </div>
-            <div>
-<!--
+                </div>
+                <div>
+                    <!--
                 <figure>
                     <img src="img/wordpress.png" alt="wordpress logo">
                     <figcaption>Wordpress</figcaption>
@@ -117,58 +119,59 @@
                 </figure>
 -->
 
-                <figure>
-                    <img src="img/unity.png" alt="unity logo">
-                    <figcaption>Unity</figcaption>
-                </figure>
-                <figure>
-                    <img src="img/photoshop.png" alt="photoshop logo">
-                    <figcaption>Photoshop</figcaption>
-                </figure>
-            </div>
-        </article>
-    </section>
-<!--    <span id="projectsAnchor"></span>-->
-    <section class="projects">
-        <header>
-            Projekty
-        </header>
-        <article>
-            <div class="projectsDescription">
-                <p>
-                    Lista projektów, które wykonałem podczas nauki i poszerzania wiedzy na temat programowania.
-                </p>
-                <p>
-                    Każdy z wykonanych projektów nauczył mnie czegoś nowego, poprzez stałe poznawanie nowych zagadnien udało mi się w znacznym stopniu usamodzielnić na polu programowania.
-                </p>
-                <p>
-                    Choć zdaję sobie sprawe ile jeszcze mam nauki przed sobą i szczerze powiedziawszy bardzo mnie to motywuje do działania.
-                </p>
-                <a href="projects.html">
-                    <div class="projectsBtn">PROJEKTY</div>
-                </a>
-            </div>
-            <div class="projectsImg">
-                <img src="img/projects.png" alt="project image">
-            </div>
-        </article>
-    </section>
-<!--    <span id="contactAnchor"></span>-->
-    <section class="contact">
-        <header>
-            Kontakt
-        </header>
-        <article>
-            <div class="contactWrapper"> 
-                <p><i class="fas fa-at"></i> damian_zalewskipl@o2.pl</p>
-                <p><i class="fab fa-github"></i> <a href="https://www.github.com/DamianZalewski">www.github.com/DamianZalewski</a></p>
-                <p><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/damian-zalewski-pl">www.linkedin.com/in/damian-zalewski-pl</a></p>
-            </div>
-        </article>
-    </section>
-    <footer>
-    Damian Zalewski &copy; 2020
-    </footer>
-   </div>
+                    <figure>
+                        <img src="img/unity.png" alt="unity logo">
+                        <figcaption>Unity</figcaption>
+                    </figure>
+                    <figure>
+                        <img src="img/photoshop.png" alt="photoshop logo">
+                        <figcaption>Photoshop</figcaption>
+                    </figure>
+                </div>
+            </article>
+        </section>
+        <!--    <span id="projectsAnchor"></span>-->
+        <section class="projects">
+            <header>
+                Projekty
+            </header>
+            <article>
+                <div class="projectsDescription">
+                    <p>
+                        Lista projektów, które wykonałem podczas nauki i poszerzania wiedzy na temat programowania.
+                    </p>
+                    <p>
+                        Każdy z wykonanych projektów nauczył mnie czegoś nowego, poprzez stałe poznawanie nowych zagadnien udało mi się w znacznym stopniu usamodzielnić na polu programowania.
+                    </p>
+                    <p>
+                        Choć zdaję sobie sprawe ile jeszcze mam nauki przed sobą i szczerze powiedziawszy bardzo mnie to motywuje do działania.
+                    </p>
+                    <a href="projects.html">
+                        <div class="projectsBtn">PROJEKTY</div>
+                    </a>
+                </div>
+                <div class="projectsImg">
+                    <img src="img/projects.png" alt="project image">
+                </div>
+            </article>
+        </section>
+        <!--    <span id="contactAnchor"></span>-->
+        <section class="contact">
+            <header>
+                Kontakt
+            </header>
+            <article>
+                <div class="contactWrapper">
+                    <p><i class="fas fa-at"></i> damian_zalewskipl@o2.pl</p>
+                    <p><i class="fab fa-github"></i> <a href="https://www.github.com/DamianZalewski">www.github.com/DamianZalewski</a></p>
+                    <p><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/damian-zalewski-pl">www.linkedin.com/in/damian-zalewski-pl</a></p>
+                </div>
+            </article>
+        </section>
+        <footer>
+            Damian Zalewski &copy; 2020
+        </footer>
+    </div>
 </body>
+
 </html>
