--- a/projects.html
+++ b/projects.html
@@ -21,12 +21,10 @@
         <nav>
             <header><a href="index.html" class="textLink">Damian Zalewski IT</a></header>
             <ul>
-                <!--            <a href="#aboutMeAnchor"><li>O mnie</li></a>-->
-                <!--            <a href="#mySkillsAnchor"><li>Technologie</li></a>-->
                 <a href="projects.html">
                     <li class="buttonLink">Projekty</li>
+                    <li class="iconLink"><i class="fas fa-file-word"></i></li>
                 </a>
-                <!--            <a href="#contactAnchor"><li>Kontakt</li></a>-->
             </ul>
         </nav>
         <section class="projectsExamples">
