--- a/projects.html
+++ b/projects.html
@@ -18,6 +18,7 @@
 
 <body>
     <div class="pageWrapper">
+       <div class="loadingScreen"><i class="spinner fas fa-circle-notch"></i></div>
         <nav>
             <header><a href="index.html" class="textLink">Damian Zalewski IT</a></header>
             <ul>
