added php shop project

--- a/projects.html
+++ b/projects.html
@@ -38,12 +38,12 @@
                         System sklepu internetowego wykonany z wykorzystaniem Bootstrap, PHP i JQuery.
                     </div>
                     <div class="overlay">
-                        <a href="#">
+                        <a href="https://github.com/DamianZalewski/portfolioPage">
                             <div class="iconContainer">
                                 <i class="fas fa-code"></i>
                             </div>
                         </a>
-                        <a href="#">
+                        <a href="http://dzitshopsystem.000webhostapp.com/">
                             <div class="iconContainer">
                                 <i class="fas fa-laptop"></i>
                             </div>
