updated email address

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </header>
             <article>
                 <div class="contactWrapper">
-                    <p><i class="fas fa-at"></i> damian_zalewskipl@o2.pl</p>
+                    <p><i class="fas fa-at"></i> damian.zalewski.dev@gmail.com</p>
                     <p><i class="fab fa-github"></i> <a href="https://www.github.com/DamianZalewski">www.github.com/DamianZalewski</a></p>
                     <p><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/damian-zalewski-pl">www.linkedin.com/in/damian-zalewski-pl</a></p>
                 </div>
